# pure-txt-interpolate

./: default.nix  pure-txt-interpolate.cabal
src/Pure/Data/Txt/: Interpolate.hs
src/Pure/Data/Txt/Interpolate/: Internal.hs  Unindent.hs
