name:                pure-txt-interpolate
version:             0.7.0.0
synopsis:            A 'pure-txt'-oriented port of Simon Hengel's interpolate package.
homepage:            github.com/grumply/pure-txt-interpolate
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-txt >= 0.7 && < 1,
    haskell-src-meta >= 0.8,
    template-haskell

  exposed-modules:
    Pure.Data.Txt.Interpolate
    Pure.Data.Txt.Interpolate.Unindent
    Pure.Data.Txt.Interpolate.Internal

  hs-source-dirs: src

  default-language: Haskell2010


