name:                pure-txt-interpolate
version:             0.8.0.0
synopsis:            A 'pure-txt'-oriented port of Simon Hengel's interpolate package.
homepage:            purehs.org/doc/pure-txt-interpolate
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-txt-interpolate.git

library
  build-depends:
    base,
    pure-txt,
    haskell-src-meta,
    template-haskell

  exposed-modules:
    Pure.Data.Txt.Interpolate
    Pure.Data.Txt.Interpolate.Unindent
    Pure.Data.Txt.Interpolate.Internal

  hs-source-dirs: src

  default-language: Haskell2010


